add path: /action/chatroom
