# controllers/Record.js
@@ -43,15 +43,16 @@ module.exports.actionTesterGET = function actionTesterGET (req, res, next) {
   var eid = req.swagger.params['eid'].value;
   var mail = req.swagger.params['mail'].value;
   var beforeTime = req.swagger.params['beforeTime'].value;
+  var recordType = req.swagger.params['recordType'].value;
   Record.actionTesterGET(eid,mail,beforeTime)
     .then(function (response) {
       if(mail!=null){
-        selectActionBymail(eid,mail,beforeTime,function(re){
+        selectActionBymail(eid,mail,beforeTime,recordType,function(re){
 
             utils.writeJson(res, re);
         });
       }else {
-        selectActionByeid(eid,beforeTime,function(re){
+        selectActionByeid(eid,beforeTime,recordType,function(re){
             utils.writeJson(res, re);
         });
       }
@@ -61,33 +62,36 @@ module.exports.actionTesterGET = function actionTesterGET (req, res, next) {
     });
 };
 
-function selectActionByeid(eid,beforeTime,nextstep){
+function selectActionByeid(eid,beforeTime,recordType,nextstep){
   const connection = new sql('CALS');
+  var querytext = "SELECT * FROM `behaviorRcord` WHERE `tid` LIKE '"+eid+"-%'";
   if(beforeTime!=null){
-    var querytext = "SELECT * FROM `behaviorRcord` WHERE `tid` LIKE '"+eid+"-%' AND `time` < '"+beforeTime+"'";
-  }else{
-    var querytext = "SELECT * FROM `behaviorRcord` WHERE `tid` LIKE '"+eid+"-%'";
+    querytext+=" AND `time` < '"+beforeTime+"';"
+  }
+  if(recordType!=null){
+    querytext+=" AND `Type` = '"+recordType+"';"
   }
 
 
 
-
+  console.log(querytext);
   connection.query(querytext, function(returnValue) {
       nextstep(returnValue);
   });
 }
 
-function selectActionBymail(eid,mail,beforeTime,nextstep){
+function selectActionBymail(eid,mail,beforeTime,recordType,nextstep){
   const connection = new sql('CALS');
+  var querytext = "SELECT * FROM `behaviorRcord` WHERE `tid` LIKE '"+eid+"-"+mail+"%'";
   if(beforeTime!=null){
-    var querytext = "SELECT * FROM `behaviorRcord` WHERE `tid` LIKE '"+eid+"-"+mail+"%' AND `time` < '"+beforeTime+"'";
-  }else{
-    var querytext = "SELECT * FROM `behaviorRcord` WHERE `tid` LIKE '"+eid+"-"+mail+"%'";
+    querytext += " AND `time` < '"+beforeTime+"'";
+  }
+  if(recordType!=null){
+    querytext+=" AND `Type` = '"+recordType+"';"
   }
 
 
-
-
+  console.log(querytext);
   connection.query(querytext, function(returnValue) {
       nextstep(returnValue);
   });
@@ -110,3 +114,35 @@ module.exports.actionTesterOPTIONS = function actionTesterOPTIONS (req, res, nex
       utils.writeJson(res, response);
     });
 };
+
+////////////////////////////////////////////////////////////
+
+module.exports.actionChatroomGET = function actionChatroomGET (req, res, next) {
+  var chatroomTag = req.swagger.params['chatroomTag'].value;
+  console.log("chatroomTag",chatroomTag);
+  Record.actionChatroomGET(chatroomTag)
+    .then(function (response) {
+      selectActionByChatroomTag(chatroomTag,function(re){
+        utils.writeJson(res, re);
+      });
+    })
+    .catch(function (response) {
+      utils.writeJson(res, response);
+    });
+};
+
+function selectActionByChatroomTag(Tag,nextstep){
+  //SELECT `behaviorRcord`.*,`tester`.`chatroomTag` FROM `behaviorRcord`,`tester` WHERE `tester`.`chatroomTag`='2' AND `behaviorRcord`.`tid`=`tester`.`tid` ORDER BY `bid` DESC
+  console.log("chatroomTag",Tag);
+  const connection = new sql('CALS');
+  console.log("chatroomTag",Tag);
+  var querytext = "SELECT `behaviorRcord`.*,`tester`.`chatroomTag` FROM `behaviorRcord`,`tester` WHERE `tester`.`chatroomTag`='"+Tag+"' AND `behaviorRcord`.`tid`=`tester`.`tid` ORDER BY `behaviorRcord`.`time` ASC";
+  console.log(querytext);
+
+
+
+
+  connection.query(querytext, function(returnValue) {
+      nextstep(returnValue);
+  });
+}
